# tg-reddit-aggregator

./: .env.example  .gitignore  PLAN.md  README.md  config.example.yaml  filters.example.md  pyproject.toml  start.sh
docs/: openclaw.md  setup.md  tuning-filters.md
src/aggregator/: __main__.py  config.py  dedup.py  filters.py  logging_setup.py  models.py  pipeline.py  reddit.py  store.py  telegram.py
systemd/: aggregator.service
tests/: conftest.py  test_config.py  test_dedup.py  test_e2e.py  test_filters.py  test_pipeline.py  test_reddit.py  test_store.py  test_telegram.py
