[project]
name = "tg-reddit-aggregator"
version = "0.1.0"
description = "Aggregate and dedupe news from Telegram channels and Reddit subreddits via Claude into a single Telegram destination."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "telethon>=1.36",
    "asyncpraw>=7.7",
    "anthropic>=0.40",
    "aiosqlite>=0.17,<=0.17.0",  # pinned to satisfy asyncpraw's cap; API surface we use is stable
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "tenacity>=8.5",
    "structlog>=24.1",
    "click>=8.1",
]

[project.scripts]
aggregator = "aggregator.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aggregator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:telethon.*",
    "ignore::DeprecationWarning:asyncpraw.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
